--- a/card.html
+++ b/card.html
@@ -27,8 +27,8 @@
     </div>
 
     <div class="footer">
-        <input class="button" type="reset" value="Reset">
-        <input class="button" type="reset" value="Start">
+        <input class="button" type="button" id="reset" value="Reset">
+        <input class="button" type="button" id="start" value="Start">
 
     </div>
 
