--- a/html/card.html
+++ b/html/card.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="css/commom.css">
-    <link rel="stylesheet" href="css/card.css">
+    <link rel="stylesheet" href="../css/commom.css">
+    <link rel="stylesheet" href="../css/card.css">
 
 
 </head>
@@ -15,10 +15,18 @@
 <body>
 
     <div class="header">
+        <a href="../index.html">
+            <img src="../img/home.png"  class="home" alt="home">
+        </a>
+        
         <h1>카드 짝맞추기!</h1>
     </div>
 
     <div class="body">
+        <div>
+            <div id="stopwatch">00:00.00</div>
+        </div>
+
         <div class="box">
             <ul>
                 <div class="s_box"></div>
@@ -34,6 +42,7 @@
 
 </body>
 
-<script type="text/javascript" src="js/card.js"> </script>
+<script type="text/javascript" src="../js/card.js"> </script>
+<script type="text/javascript" src="../js/timer.js"> </script>
 
 </html>
