--- a/html/color.html
+++ b/html/color.html
@@ -6,14 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timer</title>
     
-    <link rel="stylesheet" href="css/commom.css">
-    <link rel="stylesheet" href="css/color.css">
+    <link rel="stylesheet" href="../css/commom.css">
+    <link rel="stylesheet" href="../css/color.css">
 
 </head>
 
 <body>
 
     <div class="header">
+        <a href="../index.html">
+            <img src="../img/home.png"  class="home" alt="home">
+        </a>
         <h1>Color</h1>
     </div>
 
@@ -36,6 +39,6 @@
 
 </body>
 
-<script type="text/javascript" src="js/color.js"> </script>
+<script type="text/javascript" src="../js/color.js"> </script>
 
 </html>
