--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
         <div class="box">
             <ul>
                 <div class="s_box">
-                    <a href="card.html">
+                    <a href="html/card.html">
                         <img src="img/card.png" alt="">
                         <span>짝맞추기</span> 
                     </a>
 
-                    <a href="tictactoe.html">
+                    <a href="html/tictactoe.html">
                         <img src="img/ttt.png" alt="">
                         <span>틱택토</span>
                     </a>
 
-                    <a href="timer.html">
+                    <a href="html/timer.html">
                         <img src="img/timer.png" alt="">
                         <span>타이머</span>
                     </a>
 
-                    <a href="color.html">
+                    <a href="html/color.html">
                         <img src="img/color.png" alt="">
                         <span>색맞추기</span>
                     </a>
