--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
         <div class="box">
             <ul>
                 <div class="s_box">
+                    <a href="html/login.html">
+                        <img src="img/login.png" alt="">
+                        <span>로그인</span> 
+                    </a>
+
+                    <a href="html/todo.html">
+                        <img src="img/todo.png" alt="">
+                        <span>Todolist</span>
+                    </a>
+
+                    <a href="html/timer.html">
+                        <img src="img/timer.png" alt="">
+                        <span>타이머</span>
+                    </a>
+
                     <a href="html/card.html">
                         <img src="img/card.png" alt="">
                         <span>짝맞추기</span> 
@@ -28,12 +43,6 @@
                         <img src="img/ttt.png" alt="">
                         <span>틱택토</span>
                     </a>
-
-                    <a href="html/timer.html">
-                        <img src="img/timer.png" alt="">
-                        <span>타이머</span>
-                    </a>
-
                     <a href="html/color.html">
                         <img src="img/color.png" alt="">
                         <span>색맞추기</span>
