--- a/html/color.html
+++ b/html/color.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timer</title>
+    <title>Color</title>
     
     <link rel="stylesheet" href="../css/commom.css">
     <link rel="stylesheet" href="../css/color.css">
