--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
 
     <div class="header">
         <h1>Main</h1>
+        <a href="html/login.html">
+            <img src="img/login.png" class="home_login" alt="">
+        </a>
     </div>
 
     <div class="body">
         <div class="box">
             <ul>
                 <div class="s_box">
-                    <a href="html/login.html">
-                        <img src="img/login.png" alt="">
-                        <span>로그인</span> 
+                    <a href="html/users.html">
+                        <img src="img/user/user.png" alt="">
+                        <span>프로필</span> 
                     </a>
 
                     <a href="html/todo.html">
