--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
                         <img src="img/color.png" alt="">
                         <span>색맞추기</span>
                     </a>
+                    <a href="html/gallery.html">
+                        <img src="img/gallery.png" alt="">
+                        <span>이미지</span>
+                    </a>
+                    <a href="html/library.html">
+                        <img src="img/library.png" alt="">
+                        <span>전자책</span>
+                    </a>
 
                 </div>
             </ul>
