--- a/html/gallery.html
+++ b/html/gallery.html
@@ -23,10 +23,10 @@
     <div class="body">
         <div class="box">
             <div class="img_box">
-                <img class="g_img" src="" id="first_img">
+                <img class="g_img" id="first_img">
             </div>
             <div class="img_box">
-                <img class="g_img" src="" id="second_img">
+                <img class="g_img" id="second_img">
             </div>
             
         </div>
