--- a/html/login.html
+++ b/html/login.html
@@ -42,7 +42,7 @@
     <div class="footer">
     </div>
 
-    <script type="text/javascript" src="../js/login.js"> </script>
+    <script type="text/javascript" src="../js/login/login.js"> </script>
 
 </body>
 </html>
